<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0D0D"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_activity_text"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/changeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/onSecondActivity"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="onSecondActivity"
        android:padding="30dp"
        android:text="@string/onSecondActivity"
        android:textColor="#130F0F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/changeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeColor"
        android:padding="30dp"
        android:text="@string/change_color"
        app:layout_constraintBottom_toTopOf="@+id/onSecondActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <Button
        android:id="@+id/orderDesert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_desert"
        app:layout_constraintBottom_toTopOf="@+id/onSecondActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onOrderDesert"
        app:layout_constraintTop_toBottomOf="@+id/changeColor"
        android:longClickable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>
