<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E80E0E"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_activity_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_launcher_background"
        android:drawableStart="@drawable/ic_launcher_background" />


    <EditText
        android:id="@+id/textToDetailedActivity"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#00B8D4"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint"
        android:inputType="date"
        android:padding="25dp"
        android:textColor="#120F13"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textFromDetailedActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00B8D4"
        android:gravity="center"
        android:hint="@string/hint2"
        android:padding="25dp"
        android:textColor="#120F13"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textToDetailedActivity"
        app:layout_constraintVertical_bias="0.288" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/onFirstActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00C853"
            android:onClick="onFirstActivity"
            android:paddingVertical="50dp"
            android:text="@string/to_first_activity"
            android:textColor="#0C0E0E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/onDetailedActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFD600"
            android:onClick="onDetailedActivity"
            android:paddingVertical="50dp"
            android:text="@string/to_detailed_activity"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
